# Restapi-S3

./: pyproject.toml
core/: settings.py
